--- a/Diabetes_Predict.ipynb
+++ b/Diabetes_Predict.ipynb
@@ -3494,7 +3494,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 589
+          "height": 576
         },
         "id": "TQbtFeJzI1Y9",
         "outputId": "b55cbb72-6632-4960-b772-858ed6ca7b7b"
@@ -3654,14 +3654,14 @@
       "source": [
         "lr = LogisticRegression()\n",
         "\n",
-        "pipeline = Pipeline([('std_scaler', StandardScaler()),\n",
+        "lr_pipeline = Pipeline([('std_scaler', StandardScaler()),\n",
         "                     ('lr',lr)\n",
         "                     ])"
       ],
       "metadata": {
         "id": "OOe5laakSaip"
       },
-      "execution_count": 39,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -3670,7 +3670,7 @@
         "from sklearn.model_selection import cross_val_score\n",
         "\n",
         "# 교차 검증 실행\n",
-        "scores = cross_val_score(pipeline, X, y, cv=5, scoring='accuracy')\n",
+        "scores = cross_val_score(lr_pipeline, X, y, cv=5, scoring='accuracy')\n",
         "print(\"LR 교차 검증 정확도: \",scores)\n",
         "print(\"LR 평균 정확도: \", scores.mean())"
       ],
@@ -3679,9 +3679,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gufYWtLFSmLB",
-        "outputId": "cfcd97ab-4698-4902-ea91-3704fd3a4cbf"
+        "outputId": "04f75c05-8d93-4ee7-a11e-a386dd000cc9"
       },
-      "execution_count": 40,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -4184,9 +4184,80 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.model_selection import cross_val_predict\n",
+        "\n",
+        "y_pred = cross_val_predict(lr_pipeline, X,y,cv=5)"
+      ],
       "metadata": {
         "id": "1ogyyaIad_98"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
+        "confusion_matrix(y,y_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TzWwEKYqDQka",
+        "outputId": "185e8a4f-9c41-433a-91e2-6123d164ecd0"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[438,  62],\n",
+              "       [117, 151]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+        "\n",
+        "print(f\"Precision Score: {precision_score(y,y_pred)}\")\n",
+        "print(f\"Recall Score: {recall_score(y,y_pred)}\")\n",
+        "print(f\"F1 Score: {f1_score(y,y_pred)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YIkMWhD7DX61",
+        "outputId": "4f46b27e-f1a3-4906-e801-36bf5551fa09"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Precision Score: 0.7089201877934272\n",
+            "Recall Score: 0.5634328358208955\n",
+            "F1 Score: 0.6278586278586279\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FiwRR3cJDpXU"
       },
       "execution_count": null,
       "outputs": []
@@ -4196,7 +4267,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1fO9FO2xE3GluK3-pgg4pMJl3Yiz6Qwv-",
-      "authorship_tag": "ABX9TyPsD3DpqqWfKIdxlzbJp+G/"
+      "authorship_tag": "ABX9TyM2/cvocJM5+Qy2w5V4UIq9"
     },
     "kernelspec": {
       "display_name": "Python 3",
