--- a/Diabetes_Predict.ipynb
+++ b/Diabetes_Predict.ipynb
@@ -4415,23 +4415,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.model_selection import GridSearchCV\n",
         "\n",
-        "# rf_grid = RandomForestClassifier()\n",
-        "# params = {\n",
-        "#     'max_depth':[3,5,7,10],\n",
-        "#     'n_estimators':[100,200,300],\n",
-        "#     'max_features':[3,4,5,6,7,8],\n",
-        "#     'min_samples_leaf':[1,2,4]\n",
-        "# }\n",
+        "rf_grid = RandomForestClassifier()\n",
+        "params = {\n",
+        "    'max_depth':[3,5,7,10],\n",
+        "    'n_estimators':[100,200,300],\n",
+        "    'max_features':[3,4,5,6,7,8],\n",
+        "    'min_samples_leaf':[1,2,4]\n",
+        "}\n",
         "\n",
-        "# grid = GridSearchCV(rf_grid, params,\n",
-        "#                     cv=10, # 교차검증 : 데이터가 적으므로 10으로 설정\n",
-        "#                     scoring='accuracy',verbose=3)\n",
-        "# model_grid = grid.fit(X,y)\n",
+        "grid = GridSearchCV(rf_grid, params,\n",
+        "                    cv=10, # 교차검증 : 데이터가 적으므로 10으로 설정\n",
+        "                    scoring='accuracy',verbose=3)\n",
+        "model_grid = grid.fit(X,y)\n",
         "\n",
-        "# print('Best Hyperparameters: ', str(model_grid.best_params_))\n",
-        "# print('Best Score: ', str(model_grid.best_score_))"
+        "print('Best Hyperparameters: ', str(model_grid.best_params_))\n",
+        "print('Best Score: ', str(model_grid.best_score_))"
       ],
       "metadata": {
         "id": "SDpEtEYbdpMW",
@@ -6623,7 +6623,7 @@
         "    min_samples_leaf= 4,\n",
         "    n_estimators= 100)\n",
         "\n",
-        "rf_clf.fit(X_train, y_train)\n",
+        "rf_clf.fit(X, y)\n",
         "pred = rf_clf.predict(X_test)\n",
         "print(\"예측 정확도:{:.4f}\".format(accuracy_score(y_test, pred)))"
       ],
@@ -6632,15 +6632,69 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NKOFtZUcBAPJ",
-        "outputId": "2cba8966-928d-4fb2-cf01-94b355964a7c"
+        "outputId": "7ec99fdf-25e6-46eb-9010-019b8e130d5c"
       },
-      "execution_count": 54,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "예측 정확도:0.7143\n"
+            "예측 정확도:0.7792\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rf_clf = RandomForestClassifier(random_state=42)\n",
+        "grid = GridSearchCV(rf_clf, params, cv=3, scoring='accuracy', verbose=3, n_jobs=-1)\n",
+        "grid.fit(X_train, y_train)  # X_train에서 최적의 하이퍼파라미터 찾기\n",
+        "\n",
+        "# 최적의 모델을 가져와서 평가\n",
+        "best_rf = grid.best_estimator_\n",
+        "pred = best_rf.predict(X_test)\n",
+        "print(\"예측 정확도:{:.4f}\".format(accuracy_score(y_test, pred)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oG7wdknCSAu_",
+        "outputId": "60d341f4-16bf-4db2-944f-ec2d546257c8"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 3 folds for each of 216 candidates, totalling 648 fits\n",
+            "예측 정확도:0.7013\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Best Hyperparameters: ', str(grid.best_params_))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fTnxc5k0R7Ii",
+        "outputId": "0ecbbef7-d0df-45e5-c6dc-0a7fc7aacdc3"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Best Hyperparameters:  {'max_depth': 7, 'max_features': 4, 'min_samples_leaf': 2, 'n_estimators': 100}\n"
           ]
         }
       ]
@@ -6649,7 +6703,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "gpvq7vhKQ4mK"
+        "id": "kHqJTkK6bN-d"
       },
       "execution_count": null,
       "outputs": []
@@ -6659,7 +6713,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1fO9FO2xE3GluK3-pgg4pMJl3Yiz6Qwv-",
-      "authorship_tag": "ABX9TyPV1YZohU+0sDgwovfuMfWP"
+      "authorship_tag": "ABX9TyOxqPSYLlWG/ndG2jJ/EWQW"
     },
     "kernelspec": {
       "display_name": "Python 3",
